--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,27 +1,7 @@
-<%= form_with(model: book, local: true) do |form| %>
-  <% if book.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(book.errors.count, "error") %> prohibited this book from being saved:</h2>
-
-      <ul>
-      <% book.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
-  </div>
-
-  <div class="field">
-    <%= form.label :author %>
-    <%= form.text_field :author %>
-  </div>
-
+<%= simple_form_for(book) do |f| %>
+  <%= f.input :title %>
+  <%= f.input :author %>
   <div class="actions">
-    <%= form.submit %>
+    <%= f.button :submit, :class => 'btn-primary' %>
   </div>
 <% end %>
