--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,29 +1,24 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Books</h1>
-
-<table>
+<table class="table table-striped">
   <thead>
     <tr>
       <th>Title</th>
       <th>Author</th>
-      <th colspan="3"></th>
+      <th>&nbsp;</th>
     </tr>
   </thead>
-
   <tbody>
     <% @books.each do |book| %>
       <tr>
         <td><%= book.title %></td>
         <td><%= book.author %></td>
-        <td><%= link_to 'Show', book %></td>
-        <td><%= link_to 'Edit', edit_book_path(book) %></td>
-        <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td class="text-right">
+          <%= link_to 'Edit', edit_book_path(book), :class => 'btn btn-link btn-xs' %>
+          <%= link_to 'Delete', book_path(book), :class => 'btn btn-xs btn-danger',
+                          :method => :delete, :data => { :confirm => 'Are you sure?' } %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Book', new_book_path %>
+<%= link_to 'New Book', new_book_path, :class => 'btn btn-primary' %>
