--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -21,4 +21,5 @@
     <% end %>
   </tbody>
 </table>
+<%= paginate @books %><br>
 <%= link_to 'New Book', new_book_path, :class => 'btn btn-primary' %>
